--- a/fields/week1.tex
+++ b/fields/week1.tex
@@ -201,8 +201,8 @@
 
   \begin{proof} \hfill
     \begin{enumerate}
-      \item ``$\Rightarrow$'': For any $\bar{r} \in R/I$ with $\bar{r} \neq 0$, then $r \not\in I$.
-        Consider $\gen{ r } + I$ which contains $I$ and is not equal to $I$ because $r \not\in I$.
+      \item ``$\Rightarrow$'': For any $\bar{r} \in R/I$ with $\bar{r} \neq 0$, then $r \notin I$.
+        Consider $\gen{ r } + I$ which contains $I$ and is not equal to $I$ because $r \notin I$.
         Since $I$ is maximal, $\gen{ r } + I = R$, and thus $\exists x \in R, y \in I$ such that
         $xr + y = 1$, so $\bar{x} \bar{r} = \bar{1}$. Hence every non-zero element has multiply inverse
         and $R / I$ is a field.
