--- a/fields/week3.tex
+++ b/fields/week3.tex
@@ -74,7 +74,7 @@ In below we would use the Zorn's lemma heavily.
     Let $\tilde{J} = \max(J_1, J_2)$, then $x, y \in \tilde{J}$
     which implies $x + y \in \tilde{J}$, and it is easy to check that for any $x \in R, y \in J$, $xy \in J$.
 
-    Also, $J$ is proper since $1 \not\in J$, or else $1 \in J_i$ and thus $J_i = R$
+    Also, $J$ is proper since $1 \notin J$, or else $1 \in J_i$ and thus $J_i = R$
     which leads to a contradiction.
 
     By Zorn's lemma, there exists a maximal element in $S$, and thus it is a
