--- a/fields/week8.tex
+++ b/fields/week8.tex
@@ -127,7 +127,7 @@ Now we prove the L\"{u}roth's theorem:
   $\beta(t)m(x) = a_n(t)x^n + \dots + a_1(t)x + a_0(t)$ is primitive
   in $K[t][x] = K[t, x]$. Let $F(t, x) = \beta(t)m(x)$.
 
-  Since $t$ is not algebraic over $K$, there exists some $u = \frac{a_i(t)}{a_n(t)} \not\in K$.
+  Since $t$ is not algebraic over $K$, there exists some $u = \frac{a_i(t)}{a_n(t)} \notin K$.
   Write $u = \frac{f(t)}{g(t)}$ with $\gcd(f, g) = 1$.
   (Note that $u \in E$)
 
@@ -228,7 +228,7 @@ And $\trace(T_\alpha) = -a_{n-1}, \det(T_\alpha) = (-1)^n a_0$.
     ``$\Rightarrow$'': Let $\Gal(L/K) = \gen{\sigma}$ with $\ord(\sigma) = p$. Then
     $\trace_{L/K}(1) = p = 0$. By theorem~\ref{thm:Hilbert-theorem-90},
     exists $\alpha$ satisfied $1 = \sigma(\alpha) - \alpha$.
-    So $\alpha \not\in K$. Then we have $1 < [K(\alpha): K] \bigm| [L: K] = p$,
+    So $\alpha \notin K$. Then we have $1 < [K(\alpha): K] \bigm| [L: K] = p$,
     so $[K(\alpha): K] = p \implies K(\alpha) = L$.
 
     Notice that $\sigma^k(\alpha) = \alpha + k$.
