--- a/group/week2.tex
+++ b/group/week2.tex
@@ -364,7 +364,7 @@ For $n = 3, A \in \text{O}(3)$, we have $A \sim \begin{pmatrix}
 \begin{example}
   $G = S_3, G_1 = \gen{\cycle{1,2}}, G_2 = \gen{\cycle{2,3}},
   G_1G_2 = \{ 1, \cycle{1,2}, \cycle{2,3}, \cycle{1,2,3} \} \not\le G$
-  since $\cycle{1,3,2} = \cycle{1,2,3}^{-1} \not\in G_1G_2$.
+  since $\cycle{1,3,2} = \cycle{1,2,3}^{-1} \notin G_1G_2$.
 \end{example}
 
 \begin{prop}
