--- a/group/week3.tex
+++ b/group/week3.tex
@@ -127,7 +127,7 @@ $b_2^{-1}a_1^{-1}a_2b_2 \in H$.
       \end{example}
       \begin{proof}
         We can write $G = H \cup Ha = H \cup aH \implies aH = Ha,
-        \forall a \not\in H$.
+        \forall a \notin H$.
       \end{proof}
   \end{enumerate}
 \end{prop}
