--- a/group/week8.tex
+++ b/group/week8.tex
@@ -262,7 +262,7 @@
         In this cases, $\exists a_j$ s.t.
         $p \nDiv \frac{\abs{G}}{\abs{Z_G(a_j)}} \implies
         p^\alpha \Div \abs{Z_G(a_j)}$. And $Z_G(a_j) \lneq G$ since
-        $a_j \not\in Z_G$.
+        $a_j \notin Z_G$.
         By induction hypothesis, $\exists H \le Z_G(a_j) \le G$ s.t.
         $\abs{H} = p^k$. \qedhere
     \end{description}
