--- a/hw/week11.tex
+++ b/hw/week11.tex
@@ -20,7 +20,7 @@
   \begin{itemize}
     \item A Gr\"obner basis $G = \Set{g_1, \dots, g_m}$ of $I$ is said to be
       minimal if $\LT(g_i)$ is monic for all $i$ and $\forall j, \quad
-      \LT(g_i) \not\in \gen{\LT(G \setminus\Set{g_j})}$.
+      \LT(g_i) \notin \gen{\LT(G \setminus\Set{g_j})}$.
     \item A minimal Gr\"obner basis $G = \Set{g_1, \dots, g_m}$ is said to be
       reduced if for all $j$, no term in $g_j$ is divisible by any of
       $\LT(g_1), \dots, \LT(g_{j-1}), \LT(g_{j+1}), \dots, \LT(g_m)$.
