--- a/hw/week5.tex
+++ b/hw/week5.tex
@@ -66,7 +66,7 @@
     \item Let $h(x) = (x-\beta_1)(x-\beta_2)(x-\beta_3) \in K[x]$ with discriminant
       $D(h)$, Show that
       \begin{enumerate}[(1)]
-        \item If $h(x)$ is irr. and $D(h) \not\in K^2$, then $G_f \cong S_4$.
+        \item If $h(x)$ is irr. and $D(h) \notin K^2$, then $G_f \cong S_4$.
         \item If $h(x)$ is irr. and $D(h) \in K^2$, then $G_f \cong A_4$.
         \item If $h(x)$ splits completely in $K[x]$, then $G_f \cong V$.
         \item Let $h(x)$ has one root in $K$. Then
