--- a/main.tex
+++ b/main.tex
@@ -179,6 +179,7 @@
 \newcommand{\Segment}[1]{\overline{{#1}}}
 %%%% Math symbol %%%%
 \newcommand{\defeq}{\vcentcolon=}
+\newcommand{\Ab}{\mathbb{A}}
 \newcommand{\Nb}{\mathbb{N}}
 \newcommand{\Zb}{\mathbb{Z}}
 \newcommand{\Qb}{\mathbb{Q}}
