--- a/multilinear/week13.tex
+++ b/multilinear/week13.tex
@@ -159,7 +159,7 @@ $\tilde{S}^k(V) = \sigma(T^k(V)) \quad \tilde{\Lambda}^k(V) = \sigma'(T^k(V))$
   \item $\ker \sigma = C^k(V)$.
     $C^k(V) \subseteq \ker \sigma$ is obvious.
     Assume $\supsetneq$, i.e., $\exists t \in \ker \sigma$ s.t.
-    $t \not\in C^k(V)$.
+    $t \notin C^k(V)$.
     Recall $q: T^k(V) \onto S^k(V)$, since $q$ is the quotient map. Also
     $q |_{\tilde{S}^k(V)} \onto S^k(V)$, since if $q(x) = y$, then it could
     be easily checked that $q(\sigma(x)) = y$, so exists $t' \in \tilde{S}^k(V)$ satisfies
